--- a/app/src/main/res/layout/activity_enable_notification.xml
+++ b/app/src/main/res/layout/activity_enable_notification.xml
@@ -223,7 +223,7 @@
                             android:layout_marginTop="8dp"
                             android:layout_marginBottom="8dp"
                             android:fontFamily="@font/dmsans_regular"
-                            android:text="Be the first to know about new features and programs!"
+                            android:text="Be the first to know about new features and programs."
                             android:textColor="@color/txt_color_header"
                             android:textSize="18sp" />
 
@@ -249,7 +249,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="8dp"
-                        android:src="@drawable/icon_awesome_lightbulb" />
+                        android:rotation="45"
+                        android:src="@drawable/ic_notifications_black_24dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
