--- a/app/src/main/res/layout/fragment_home_dashboard.xml
+++ b/app/src/main/res/layout/fragment_home_dashboard.xml
@@ -40,6 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/ll_dashboard_main_data"
+        android:visibility="gone"
         android:orientation="vertical">
 
         <LinearLayout
