--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="textsize_large">16sp</dimen>
     <dimen name="textsize_small">12sp</dimen>
     <dimen name="textsize_extrasmall">10sp</dimen>
+    <dimen name="textsize_smallest">8sp</dimen>
     <dimen name="textsize_medium">14sp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
