Following issue resolved 1. RAD-4277: [Android][QA][Profile]Profile Screen Font Text & Size Not as per Design 2. RAD-4279: [Android][QA][Profile]Active Subscription Heading Text Not as per Design 3. RAD-4280: [Android][QA][Profile]Past Subscriptions Heading Text Not as per Design 4. RAD-4283: [Android][QA][Profile]Current Plan Capsule Placement Not as per Design 5. RAD-4278: [Android][QA][Profile]Profile Screen Cards Size & Spacing Not as per Design 6. RAD-4285: [Android][QA][Profile]Plans Screen Heading Font Not as per Design 7. RAD-4288: [Android][QA][Profile]Face Scan Booster Heading Font Not as per Design 8. RAD-4289: [Android][QA][Profile]Face Scan Booster – Info Button should not present as per Design 9. RAD-4292: [Android][QA][Profile]Scan History Results Cards Design Not as per Design 10. RAD-4297: [Android][QA][Profile]Incorrect Heading Text on Interests Screen 11. RAD-4299: [Android][QA][Profile]Interest Options Font Not as per Design 12. RAD-4301: [Android][QA][Settings]Settings Screen Heading Font Not as per Design 13. RAD-4306: [Android][QA][Settings]App Settings Heading Font Not as per Design 14. RAD-4308: [Android][QA][Settings]Notifications Screen Heading Font Not as per Design 15. RAD-4309: [Android][QA][Settings]Notifications Toggle Design Not as per Design 16. RAD-4310: [Android][QA][Settings]Export All Health Data Screen Heading Font Not as per Design 17. RAD-4313: [Android][QA][Settings] Integrations Screen Heading Font Not as per Design 18. RAD-4314: [Android][QA][Settings]Delete Account Screen Heading Font Not as per Design 19. RAD-4315: [Android][QA][Settings]Support Screen "Write To Us" Text Case Not as per Design 20. RAD-4316: [Android][QA][Settings]Support Screen Heading Font Not as per Design 21. RAD-4312: [Android][QA][Settings]Data Exported Popup Text Formatting Issue

--- a/app/src/main/res/layout/activity_delete_account_selection.xml
+++ b/app/src/main/res/layout/activity_delete_account_selection.xml
@@ -24,7 +24,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:text="Delete Account"
-            android:fontFamily="@font/dmsans_bold"
+            android:fontFamily="@font/merriweather_bold"
             android:textSize="18sp"
             android:textColor="@color/txt_color_mind"
             android:layout_weight="1"
