--- a/app/src/main/res/layout/activity_export_health_data.xml
+++ b/app/src/main/res/layout/activity_export_health_data.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:text="Export All Health Data"
             android:textSize="18sp"
-            android:fontFamily="@font/dmsans_bold"
+            android:fontFamily="@font/merriweather_bold"
             android:textColor="@color/txt_color_mind"
             android:layout_marginStart="4dp" />
     </LinearLayout>
