--- a/app/src/main/res/layout/activity_past_report.xml
+++ b/app/src/main/res/layout/activity_past_report.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="@color/white">
+    android:background="@color/settings_bg_color">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -73,6 +73,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/margin_card_16dp"
-        android:paddingHorizontal="@dimen/margin_card_16dp" />
+        android:paddingHorizontal="8dp" />
 
 </LinearLayout>
