--- a/app/src/main/res/color/switch_track_color.xml
+++ b/app/src/main/res/color/switch_track_color.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/color_switch_gray" android:state_checked="true" />
-    <item android:color="@color/color_switch_gray" android:state_checked="false" />
+    <item android:color="@color/menuselected" android:state_checked="true" />
+    <item android:color="@color/pastel_lavender" android:state_checked="false" />
 </selector>
