--- a/app/src/main/res/drawable/custom_track_onboardingswitch.xml
+++ b/app/src/main/res/drawable/custom_track_onboardingswitch.xml
@@ -4,16 +4,16 @@
         <shape android:shape="rectangle">
             <corners android:radius="30dp" />
             <size android:height="20dp" />
-            <solid android:color="#FD9493" />
-            <stroke android:width="1dp" android:color="#FD9493" />
+            <solid android:color="@color/white" />
+            <stroke android:width="1dp" android:color="@color/white" />
         </shape>
     </item>
     <item android:state_checked="true">
         <shape android:shape="rectangle">
             <corners android:radius="30dp" />
             <size android:height="20dp" />
-            <solid android:color="#FD9493" />
-            <stroke android:width="1dp" android:color="#FD9493" />
+            <solid android:color="#747474" />
+            <stroke android:width="1dp" android:color="#747474" />
         </shape>
     </item>
 </selector>
