--- a/app/src/main/res/layout/activity_notifications_new.xml
+++ b/app/src/main/res/layout/activity_notifications_new.xml
@@ -24,11 +24,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:fontFamily="@font/merriweather_bold"
             android:text="Notifications"
-            android:textSize="18sp"
-            android:fontFamily="@font/dmsans_bold"
             android:textColor="@color/txt_color_mind"
-            android:layout_marginStart="4dp" />
+            android:textSize="18sp" />
     </LinearLayout>
 
     <!-- Appearance Section -->
