--- a/app/src/main/res/layout/activity_preparing_export_health_data.xml
+++ b/app/src/main/res/layout/activity_preparing_export_health_data.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:visibility="visible">
+        android:visibility="gone">
         <!-- Header -->
         <LinearLayout
             android:id="@+id/ll_header"
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:text="Export All Health Data"
                 android:textSize="18sp"
-                android:fontFamily="@font/dmsans_bold"
+                android:fontFamily="@font/merriweather_bold"
                 android:textColor="@color/txt_color_mind"
                 android:layout_marginStart="4dp" />
         </LinearLayout>
@@ -70,7 +70,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <ImageView
             android:layout_width="120dp"
@@ -89,7 +89,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="You’ll receive a copy in your mailbox within\n  24-48 hours—keep an eye out!"
+            android:text="You’ll receive a copy in your mailbox within\n 24-48 hours—keep an eye out!"
             android:fontFamily="@font/dmsans_regular"
             android:layout_marginVertical="12dp"
             android:textColor="@color/txt_color_header"
