--- a/app/src/main/res/layout/activity_profile_settings.xml
+++ b/app/src/main/res/layout/activity_profile_settings.xml
@@ -26,8 +26,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:text="Profile"
-            android:fontFamily="@font/dmsans_bold"
-            android:textSize="18sp"
+            android:fontFamily="@font/merriweather_bold"
+            android:textSize="22sp"
             android:textColor="@color/txt_color_mind"
             android:layout_weight="1"
             android:gravity="center_vertical" />
@@ -43,87 +43,87 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         app:cardElevation="4dp"
         app:cardCornerRadius="12dp"
         android:layout_marginHorizontal="16dp"
-        android:foreground="?attr/selectableItemBackground"
-        >
-    <LinearLayout
-        android:id="@+id/llProfile"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="@dimen/margin_card_16dp"
-        android:gravity="center_vertical">
-
-        <!-- Profile Picture -->
-        <FrameLayout
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="center">
-
-            <!-- Profile Image (Initially hidden) -->
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/ivProfileImage"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:background="@drawable/circle_background"
-                android:visibility="gone"
-                android:layout_gravity="center" />
-
-            <!-- First Letter -->
-            <TextView
-                android:id="@+id/tvProfileLetter"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/circle_selected"
-                android:gravity="center"
-                android:text="K"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:textSize="36sp" />
-        </FrameLayout>
+        android:foreground="?attr/selectableItemBackground">
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:id="@+id/llProfile"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginStart="8dp">
+            android:orientation="horizontal"
+            android:padding="10dp"
+            android:gravity="center_vertical">
 
-            <TextView
-                android:id="@+id/userName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="User Test"
-                android:fontFamily="@font/dmsans_bold"
-                android:textSize="16sp"
-                android:textColor="@color/txt_color_journal_date" />
+            <!-- Profile Picture -->
+            <FrameLayout
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="center">
 
-            <TextView
-                android:id="@+id/tvUserAge"
-                android:layout_width="wrap_content"
+                <!-- Profile Image (Initially hidden) -->
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/ivProfileImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:background="@drawable/circle_background"
+                    android:visibility="gone"
+                    android:layout_gravity="center" />
+
+                <!-- First Letter -->
+                <TextView
+                    android:id="@+id/tvProfileLetter"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/circle_selected"
+                    android:gravity="center"
+                    android:text="K"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:textSize="36sp" />
+            </FrameLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:fontFamily="@font/dmsans_bold"
-                android:textColor="@color/txt_color_journal_date" />
-            <TextView
-                android:id="@+id/tvUserCity"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="India"
-                android:textSize="14sp"
-                android:fontFamily="@font/dmsans_bold"
-                android:textColor="@color/txt_color_journal_date" />
+                android:orientation="vertical"
+                android:layout_marginStart="8dp">
+
+                <TextView
+                    android:id="@+id/userName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="User Test"
+                    android:fontFamily="@font/dmsans_bold"
+                    android:textSize="16sp"
+                    android:textColor="@color/txt_color_journal_date" />
+
+                <TextView
+                    android:id="@+id/tvUserAge"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:fontFamily="@font/dmsans_bold"
+                    android:textColor="@color/txt_color_journal_date" />
+
+                <TextView
+                    android:id="@+id/tvUserCity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="India"
+                    android:textSize="14sp"
+                    android:fontFamily="@font/dmsans_bold"
+                    android:textColor="@color/txt_color_journal_date" />
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/next_arrow_settings" />
         </LinearLayout>
-
-        <ImageView
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:src="@drawable/next_arrow_settings" />
-    </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <!-- RecyclerView -->
@@ -131,8 +131,7 @@
         android:id="@+id/profileRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        />
+        android:layout_marginHorizontal="16dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -142,12 +141,12 @@
         android:fontFamily="@font/dmsans_bold"
         android:textColor="@color/txt_color_mind"
         android:paddingVertical="8dp"
-        android:layout_marginHorizontal="@dimen/margin_card_16dp"/>
+        android:layout_marginHorizontal="@dimen/margin_card_16dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPersonalization"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:nestedScrollingEnabled="false"
-        android:layout_marginHorizontal="@dimen/margin_card_16dp"/>
+        android:layout_marginHorizontal="@dimen/margin_card_16dp" />
 </LinearLayout>
