--- a/app/src/main/res/layout/activity_subscription_history.xml
+++ b/app/src/main/res/layout/activity_subscription_history.xml
@@ -49,7 +49,7 @@
 
             <TextView
                 android:id="@+id/tv_active_subscription_list"
-                android:text="Active"
+                android:text="Active Subscriptions"
                 android:textStyle="bold"
                 android:textSize="18sp"
                 android:layout_marginBottom="8dp"
@@ -96,7 +96,7 @@
 
             <TextView
                 android:id="@+id/tv_past_subscription_list"
-                android:text="Past"
+                android:text="Past Subscriptions"
                 android:textStyle="bold"
                 android:textSize="18sp"
                 android:layout_marginTop="16dp"
