--- a/app/src/main/res/layout/activity_subscription_plan_list.xml
+++ b/app/src/main/res/layout/activity_subscription_plan_list.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_weight="1"
-            android:fontFamily="@font/dmsans_bold"
+            android:fontFamily="@font/merriweather_bold"
             android:text="Plans"
             android:textColor="@color/txt_color_mind"
             android:textSize="18sp" />
@@ -35,7 +35,8 @@
             android:id="@+id/icon_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/info_affirmation" />
+            android:src="@drawable/info_affirmation"
+            android:visibility="gone"/>
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
