--- a/app/src/main/res/layout/item_breathwork.xml
+++ b/app/src/main/res/layout/item_breathwork.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardView"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
 
@@ -11,29 +11,30 @@
     app:cardElevation="4dp">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_centerHorizontal="true"
             android:scaleType="centerInside"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/ic_estore_placeholder" />
+            android:paddingVertical="10dp"
+            android:layout_marginTop="5dp"
+            android:src="@drawable/breathing_equal" />
 
         <TextView
             android:id="@+id/titleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/imageView"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="5dp"
             android:text="Title"
             android:textColor="@color/text_color_breathwork"
             android:paddingStart="10dp"
             android:fontFamily="@font/dmsans_bold"
-            android:textSize="20sp"
+            android:textSize="@dimen/textsize_large"
              />
 
         <TextView
@@ -41,17 +42,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/titleTextView"
-            android:layout_marginTop="4dp"
             android:text="Description"
             android:textColor="@color/text_color_breathwork"
-            android:padding="10dp"
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="10dp"
             android:fontFamily="@font/dmsans_semibold"
-            android:textSize="14sp" />
+            android:textSize="@dimen/textsize_small" />
 
         <ImageView
             android:id="@+id/plusButton"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
@@ -61,8 +62,8 @@
 
         <ImageView
             android:id="@+id/infoButton"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
