Bug Fixes  - RAD-3917,RAD-4049,RAD-4236,RAD-4240,RAD-4245,RAD-4253,RAD-4243,RAD-4298,RAD-4307,RAD-4322,RAD-4327,RAD-4333,RAD-4388,RAD-4381,RAD-4342,RAD-4340, RAD-4341

--- a/app/src/main/res/layout/fragment_think_right_landing.xml
+++ b/app/src/main/res/layout/fragment_think_right_landing.xml
@@ -2114,6 +2114,7 @@
                             android:layout_marginTop="15dp"
                             android:gravity="center"
                             android:background="@drawable/yellow_btn_bg"
+                            android:backgroundTint="@color/think_tab_background"
                             android:orientation="horizontal">
 
                             <ImageView
