Bug Fixes  - Ui changes goal list and check on weighloss and bulk muscle selection

--- a/app/src/main/res/layout/activity_wellness_focus_list.xml
+++ b/app/src/main/res/layout/activity_wellness_focus_list.xml
@@ -87,8 +87,8 @@
         android:layout_marginStart="36dp"
         android:layout_marginEnd="36dp"
         android:layout_marginBottom="16dp"
-        android:text="@string/str_continue"
-        android:textSize="@dimen/textsize_large"
+        android:text="Save"
+        android:textSize="@dimen/textsize_large18sp"
         android:fontFamily="@font/dmsans_bold"
         android:backgroundTint="@color/rightlife"
         android:textColor="@color/white"
