--- a/app/src/main/res/layout/custom_toast_new.xml
+++ b/app/src/main/res/layout/custom_toast_new.xml
@@ -28,7 +28,7 @@
             android:layout_marginStart="12dp"
             android:text="Reminders Set"
             android:textColor="#000000"
-            android:textSize="16sp"
+            android:textSize="@dimen/textsize_medium"
             android:textStyle="bold" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
