--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -74,9 +74,11 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/breakfast_layout"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
                     app:layout_constraintTop_toBottomOf="@+id/layout_food_name"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent">
@@ -88,7 +90,7 @@
                         android:src="@drawable/ic_view_meal_place"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
+                       />
 
                     <TextView
                         android:id="@+id/foodType"
@@ -99,8 +101,8 @@
                         android:textSize="12sp"
                         android:fontFamily="@font/dmsans_regular"
                         app:layout_constraintStart_toEndOf="@+id/mealTypeImage"
-                        app:layout_constraintTop_toTopOf="@+id/mealTypeImage"
-                        app:layout_constraintBottom_toBottomOf="@+id/mealTypeImage"/>
+                        app:layout_constraintTop_toTopOf="parent"
+                     />
 
                     <ImageView
                         android:id="@+id/veg_image"
@@ -111,19 +113,26 @@
                         android:layout_marginStart="20dp"
                         app:layout_constraintStart_toEndOf="@+id/foodType"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
+                        />
 
                     <TextView
                         android:id="@+id/vegTv"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
+                        android:layout_marginEnd="5dp"
                         android:text="Veg"
                         android:textSize="12sp"
                         android:fontFamily="@font/dmsans_regular"
+                        android:ellipsize="none"
+                        android:scrollHorizontally="false"
+                        android:singleLine="false"
+                        android:inputType="textMultiLine"
+                        android:lineSpacingExtra="2dp"
+                        android:gravity="start"
                         app:layout_constraintStart_toEndOf="@+id/veg_image"
-                        app:layout_constraintTop_toTopOf="@+id/veg_image"
-                        app:layout_constraintBottom_toBottomOf="@+id/veg_image"/>
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
