--- a/app/src/main/res/layout/fragment_your_meal_logs.xml
+++ b/app/src/main/res/layout/fragment_your_meal_logs.xml
@@ -297,6 +297,7 @@
                         android:layout_marginEnd="10dp"
                         android:layout_marginBottom="-20dp"
                         android:gravity="center"
+                        android:visibility="gone"
                         android:orientation="vertical"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
