--- a/app/src/main/res/layout/activity_new_categorylist.xml
+++ b/app/src/main/res/layout/activity_new_categorylist.xml
@@ -22,6 +22,7 @@
             android:src="@drawable/icon_back" />
 
         <TextView
+            android:id="@+id/tvHeader"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="ThinkRight"
@@ -83,7 +84,7 @@
         <include layout="@layout/loader_layout" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvJumpBackIn"
+            android:id="@+id/rvCategoryList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="16dp" />
