--- a/app/src/main/res/layout/fragment_meal_scan_results.xml
+++ b/app/src/main/res/layout/fragment_meal_scan_results.xml
@@ -67,7 +67,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="45dp"
                 android:layout_marginEnd="15dp"
                 android:layout_marginStart="15dp"
                 android:padding="10dp"
@@ -78,13 +78,15 @@
                     android:id="@+id/foodNameEdit"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textSize="18sp"
+                    android:textSize="17sp"
                     android:background="@null"
-                    android:text="Poha seb"
+                    android:text="Poha"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:maxLength="32"
                     android:fontFamily="@font/dmsans_bold"
                     android:layout_gravity="center"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="2dp"
+                    android:layout_marginStart="2dp"
                     android:textColor="@color/black_no_meals"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/editNameIC"
@@ -154,7 +156,7 @@
                     android:id="@+id/datePickerLayout"
                     android:layout_width="0dp"
                     android:layout_height="40dp"
-                    android:layout_marginEnd="8dp"
+                    android:layout_marginEnd="5dp"
                     android:layout_marginStart="15dp"
                     android:layout_weight="1"
                     android:background="@drawable/white_meal_date_bg"
@@ -165,7 +167,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="13 Feb 2025"
-                        android:textSize="14sp"
+                        android:textSize="13sp"
                         android:layout_weight="0.9"
                         android:layout_gravity="center"
                         android:layout_marginStart="7dp"
@@ -174,7 +176,7 @@
 
                     <ImageView
                         android:id="@+id/ivDatePicker"
-                        android:layout_width="20dp"
+                        android:layout_width="18dp"
                         android:layout_height="20dp"
                         android:layout_marginEnd="2dp"
                         android:layout_weight="0.1"
@@ -186,7 +188,7 @@
                     android:layout_width="0dp"
                     android:layout_height="40dp"
                     android:layout_marginEnd="15dp"
-                    android:layout_marginStart="7dp"
+                    android:layout_marginStart="5dp"
                     android:layout_weight="1"
                     android:background="@drawable/white_meal_date_bg"
                     android:orientation="horizontal">
@@ -195,7 +197,7 @@
                         android:id="@+id/spinner"
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
-                        android:textSize="14sp"
+                        android:textSize="12sp"
                         android:textStyle="bold"
                         android:layout_weight="0.9"
                         android:background="@color/white"
@@ -208,7 +210,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Breakfast"
-                        android:textSize="14sp"
+                        android:textSize="13sp"
                         android:textStyle="bold"
                         android:visibility="gone"
                         android:fontFamily="@font/dmsans_bold"
@@ -218,7 +220,7 @@
                         android:textColor="@color/black" />
 
                     <ImageView
-                        android:layout_width="20dp"
+                        android:layout_width="18dp"
                         android:layout_height="20dp"
                         android:layout_weight="0.1"
                         android:layout_marginEnd="2dp"
